# 1p2c_3D

./: 1p2c3Dproblem.hh  1p2c_benchmark_heletz3D_spatialparams.hh  1p2c_benchmark_heletz3D_testproblem.hh  1p2cmodel.hh  1p2cvolumevariables.hh  Makefile.am  README.md  heletz_2DH_3D_problem.hh  layerGridHeletz.dgf  test_1p2c.dgf  test_1p2c_2D.dgf  test_1p2c_3DHeletz.dgf  test_box1p2ctracer_heletz3D.input
