check_PROGRAMS = test_box1p2ctracer3Dheletz test_cc1p2ctracer3Dheletz

noinst_HEADERS = *.hh
EXTRA_DIST=*.input ../grids/*.dgf CMakeLists.txt

test_box1p2ctracer3Dheletz_SOURCES = test_box1p2ctracer3Dheletz.cc
test_cc1p2ctracer3Dheletz_SOURCES = test_cc1p2ctracer3Dheletz.cc

include $(top_srcdir)/am/global-rules
